homepage updated, GA switched on

--- a/index.qmd
+++ b/index.qmd
@@ -16,7 +16,7 @@ listing:
     - /careers
     - /viewpoints
     - "!index.qmd"
-    - "!sami-rahman.qmd"
+    - "!stephanie-hare.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -111,15 +111,15 @@ toc: false
 ---
 ::: {.content-container}
 ::: {.top-story .purple-background}
-<a href="/careers/career-profiles/posts/2023/04/24/sami-rahman.qmd">
+<a href="/viewpoints/interviews/posts/04/26/stephanie-hare.qmd">
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
-## 'I always thought someone like me couldn't work in data, let alone data science'
-Sami Rahman, head of data engineering and data platform at Penguin Random House, parlayed a psychology degree into a data science career – inspired by a talk on machine learning's application to human behaviour.
+## Stephanie Hare on why we need a culture of technology ethics
+The author of *Technology is Not Neutral* talks to Real World Data Science about the 'wicked problem' of technology and AI ethics, and why laws and regulations are 'necessary but insufficient' to minimise harms. 'We’re going to have to inculcate an entire new mindset,' she argues.
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
-![](careers/career-profiles/posts/2023/04/24/images/sami-rahman-bw.png)
+![](viewpoints/interviews/posts/04/26/images/stephanie-hare-bw.png)
 :::
 :::
 
@@ -171,12 +171,12 @@ Noah Wright on 'The politics of performance measurement'
 
 ::: {.content-container}
 ::: {.listing-block}
-<a href="viewpoints/interviews/index.qmd">
+<a href="viewpoints/editors-blog/index.qmd">
 
-## Interviews
+## Editors' Blog
 </a> 
 
-::: {#interviews}
+::: {#editors-blog}
 :::
 
 :::
@@ -213,12 +213,12 @@ Jonathan Auerbach on the law of the flowering plants
 
 ::: {.content-container}
 ::: {.listing-block}
-<a href="viewpoints/editors-blog/index.qmd">
+<a href="viewpoints/interviews/index.qmd">
 
-## Editors' Blog
+## Interviews
 </a> 
 
-::: {#editors-blog}
+::: {#interviews}
 :::
 
 :::
