--- a/viewpoints/interviews/posts/04/26/stephanie-hare.qmd
+++ b/viewpoints/interviews/posts/04/26/stephanie-hare.qmd
@@ -1,7 +1,7 @@
 ---
 title: "'I'm way more into prevention than cure': Stephanie Hare on why we need a culture of technology ethics"
 description: |
-  Stephanie Hare, author of 'Technology is Not Neutral', talks to Real World Data Science about the 'wicked problem' of technology and AI ethics, and why laws and regulations are 'necessary but insufficient' to minimise harms. 'We’re going to have to inculcate an entire new mindset', she argues.        
+  Stephanie Hare, author of 'Technology is Not Neutral', talks to Real World Data Science about the 'wicked problem' of technology and AI ethics, and why laws and regulations are 'necessary but insufficient' to minimise harms. 'We’re going to have to inculcate an entire new mindset,' she argues.        
 categories:
   - Technology ethics
   - AI ethics
