--- a/careers/career-profiles/posts/2023/04/24/sami-rahman.qmd
+++ b/careers/career-profiles/posts/2023/04/24/sami-rahman.qmd
@@ -43,7 +43,7 @@ As I've transitioned into management, maintaining my coding prowess is an ongoin
 I began with a psychology degree, which led to working as business psychologist where I discovered psychometric data analysis. After a master's in countering organised crime and terrorism and a few short jobs in counter terrorism/intelligence, I decided that it wasn't for me. I embraced my love for statistics and research, I dove into data science, learning Python through online platforms, and secured my first data scientist role at a WPP agency called Essence.
 
 **What, or who, first inspired you to become a data scientist?**  
-I always thought someone like me couldn't work in data, let alone data science. [Dr. Suzy Moat's](https://www.wbs.ac.uk/about/person/suzy-moat/) fascinating talk on machine learning's application to human behaviour and psychology showed me that a psychologist could make a significant impact in this field, inspiring my aspiration to try to have a data science career.
+I always thought someone like me couldn't work in data, let alone data science. [Dr Suzy Moat's](https://www.wbs.ac.uk/about/person/suzy-moat/) fascinating talk on machine learning's application to human behaviour and psychology showed me that a psychologist could make a significant impact in this field, inspiring my aspiration to try to have a data science career.
 
 **What were the hurdles or challenges that you needed to overcome on your route into the profession?**  
 Breaking into data science without a typical background in maths/computer science/physics was daunting. Building a Kaggle portfolio and coding models for fun prepared me for interviews. Another challenge was learning to harmonise my "data brain" and "business brain" to solve problems efficiently. Understanding how data solutions impact business problems will always propel you forward. 
