--- a/viewpoints/editors-blog/posts/2022/12/09/LLM-news.qmd
+++ b/viewpoints/editors-blog/posts/2022/12/09/LLM-news.qmd
@@ -31,7 +31,7 @@ The challenge with many LLMs, as we’ve seen repeatedly, is that they've no rea
 
 **HL:** I find that to be an interesting philosophical question, because ethics does move very slowly, for good reason. When you think of issues of bias and discrimination and prejudice, or misinformation and other problems that we might have with AI systems, it shouldn’t be a surprise that these can occur. We're aware of them. We're aware of the ethical issues. So, why do they always seem to catch us by surprise? Is it because we have teams of people who simply aren't aware of ethical issues or don't have any appreciation of them? This points – for me, at least – in the direction of needing to have philosophers, ethicists, theologians, lawyers working *in* the technical teams that are developing and working on these systems, rather than having them on the periphery and talking about these issues but not directly involved themselves. I think it's hugely important to ensure that you've got trust, responsibility, and ethics embedded in technical teams, because that's the only way it seems that you can avoid some of these “surprises”.  
 
-**When situations like these occur, I’m always reminded of Dr. Ian Malcolm’s line from Jurassic Park: “…your scientists were so preoccupied with whether or not they could that they didn't stop to think if they should.” The mindset seems to be, let's push the boundaries and see what we can do, rather than stop and think deeply about what the implications might be.** 
+**When situations like these occur, I’m always reminded of Dr Ian Malcolm’s line from Jurassic Park: “…your scientists were so preoccupied with whether or not they could that they didn't stop to think if they should.” The mindset seems to be, let's push the boundaries and see what we can do, rather than stop and think deeply about what the implications might be.** 
 
 **HL:** There's a balance to be struck between these things, though, right? Firstly, show consideration for some of the issues at the outset, and secondly, have checks and balances and safeguards built into the process by which you design, develop and implement these systems. That's the only way to create the proper safeguards around the systems. I don't think that there's any lack of appreciation of what needs to be done; people have been talking about this now for quite a long time. But it’s about making sure organisationally that it is done, and that you've got an operating model which bakes these things into it; that the kinds of principles and governance that you want to have around these systems are written, publicised, and properly policed. There should be no fear of making advances in that kind of a context.  
 
