--- a/viewpoints/interviews/posts/04/26/stephanie-hare.qmd
+++ b/viewpoints/interviews/posts/04/26/stephanie-hare.qmd
@@ -20,26 +20,26 @@ We're about a year late coming to [Stephanie Hare](https://www.harebrain.co/)'s 
 
 However, as Hare makes clear in our interview, we still have a long way to go to build a culture of technology ethics throughout society. Check out the full conversation below or on YouTube.
 
-<!-- {{< video [add url] >}} -->
+{{< video https://www.youtube.com/embed/INKwSTNFSVY >}}
 
 ## Timestamps
 
--   ChatGPT: just another "flavour of the month" in the tech industry? (1:18)
--   Has concern about large language models helped put technology ethics on the map? (3:17)
--   What will it take to build a culture of technology ethics -- in society, in academia, in industry? (9:16)
--   Drawing lessons from history (12:15)
--   Why technology ethics is a "wicked problem" (24:57)
--   Checklists and changing mindsets (29:49)
+-   ChatGPT: just another "flavour of the month" in the tech industry? ([1:18](https://youtu.be/INKwSTNFSVY?t=78))
+-   Has concern about large language models helped put technology ethics on the map? ([3:17](https://youtu.be/INKwSTNFSVY?t=197))
+-   What will it take to build a culture of technology ethics -- in society, in academia, in industry? ([9:16](https://youtu.be/INKwSTNFSVY?t=556))
+-   Drawing lessons from history ([12:15](https://youtu.be/INKwSTNFSVY?t=735))
+-   Why technology ethics is a "wicked problem" ([24:57](https://youtu.be/INKwSTNFSVY?t=1497))
+-   Checklists and changing mindsets ([29:49](https://youtu.be/INKwSTNFSVY?t=1789))
 
 ## Quotes
 
-"The European Union has the AI Act coming down the pipe. It doesn't cover stuff like ChatGPT specifically, but then I don't know if you want good regulation to cover the technology itself, or how technology is used. I talked about this in my book: do you want to regulate forks -- a tool -- or do you want to regulate use cases for forks? We've regulated the use case, if you will, of murder, or of injury with a fork -- or, frankly, any other tool. So it's the use case we focus on. We don't really regulate forks. \[But\] we do regulate some technologies, like biomedical technologies, human genetic stuff, anything nuclear. So we just need to think about where does AI fit with that?" (5:42)
+"The European Union has the AI Act coming down the pike. It doesn't cover stuff like ChatGPT specifically, but then I don't know if you want good regulation to cover the technology itself, or how technology is used. I talked about this in my book: do you want to regulate forks -- a tool -- or do you want to regulate use cases for forks? We've regulated the use case, if you will, of murder, or of injury with a fork -- or, frankly, any other tool. So it's the use case we focus on. We don't really regulate forks. \[But\] we do regulate some technologies, like biomedical technologies, human genetic stuff, anything nuclear. So we just need to think about where does AI fit with that?" ([5:42](https://youtu.be/INKwSTNFSVY?t=342))
 
-"Move fast and break things was the mantra for this culture \[in the technology industry\] for a really long time, at least out of the US. And it made a lot of people a lot of money, and they got worshipped by the media. And, you know, they have a whole audience of 'bros' who are fans of them. And they've never really, any of them, been held to account for what they've built." (11:56)
+"Move fast and break things was the mantra for this culture \[in the technology industry\] for a really long time, at least out of the US. And it made a lot of people a lot of money, and they got worshipped by the media. And, you know, they have a whole audience of 'bros' who are fans of them. And they've never really, any of them, been held to account for what they've built." ([11:56](https://youtu.be/INKwSTNFSVY?t=716))
 
-"Another generation or two, when we're older, might look at some of what technology we've built or our behaviour on climate change, our track record -- did we do what we could have done to slow global warming, to improve biodiversity? -- and they might hold us to account, saying, 'You could have stopped this and you didn't, right? It's not just what you did. It's what you did not do.' So we have to be super careful when we think about ethics, because ethics change, values change over time. And what seems okay today may not be okay in 10, 20, 30 years time. That is on my mind all the time. It's not very relaxing." (18:30)
+"Another generation or two, when we're older, might look at some of what technology we've built or our behaviour on climate change, our track record -- did we do what we could have done to slow global warming, to improve biodiversity? -- and they might hold us to account, saying, 'You could have stopped this and you didn't, right? It's not just what you did. It's what you did not do.' So we have to be super careful when we think about ethics, because ethics change, values change over time. And what seems okay today may not be okay in 10, 20, 30 years time. That is on my mind all the time. It's not very relaxing." ([18:30](https://youtu.be/INKwSTNFSVY?t=1110))
 
-"\[Laws and regulations\] are important, they're necessary, but they're insufficient. You can act a lot faster if you can get people preventing stuff from being built in the first place, and that means you need to have a culture of people working in technology, both within the organisations -- whether that's research labs, government, companies, universities, whatever -- and on the outside -- journalists, academics, thinkers, etc., or just the public, an informed public -- who can see something and sound the alarm and go, 'Wait a minute, hang on. That's not okay.'" (33:02)
+"\[Laws and regulations\] are important, they're necessary, but they're insufficient. You can act a lot faster if you can get people preventing stuff from being built in the first place, and that means you need to have a culture of people working in technology, both within the organisations -- whether that's research labs, government, companies, universities, whatever -- and on the outside -- journalists, academics, thinkers, etc., or just the public, an informed public -- who can see something and sound the alarm and go, 'Wait a minute, hang on. That's not okay.'" ([33:02](https://youtu.be/INKwSTNFSVY?t=1982))
 
 ## Transcript
 
@@ -75,7 +75,7 @@ Excellent, excellent. Well, I actually thought coming late to the book might act
 From your perspective as someone who's interested in and researching in the area of technology ethics, right, do you see a kind of almost a benefit that the conversation around this has put technology ethics, the conversation around that, on the map? Or do you worry that we're kind of obsessing over this one technology and this one application? We're not looking at the field more broadly?
 
 **Stephanie Hare**\
-Well, there's a few things to say on this. So like, first of all, a couple of weeks ago, a bunch of people working in AI, about 1000-plus people -- including some fictitious people, by the way -- sign this this letter calling for a moratorium on AI research for six months, which was unenforceable, clearly not going to happen, was signed by Elon Musk, who then very quickly announced he was developing his own rival to OpenAI, the company that invented ChatGPT. So you take all of that with a grain of salt. But again, if you're, if you're an historian, or if you just have a long memory, you'll remember that there have been several letters like this. There's always somebody, you know, very big-wig people. It's not that we want to dismiss it. But Stephen Hawking and Elon Musk were warning, you know, over around 10 years ago that AI was going to kill humanity if we didn't put guardrails on it. Professor Stuart Russell talked about this in his Reith Lectures a couple of years ago, which are still online and you can listen to them. And you know, he's not an alarmist. He's a serious person and a serious thinker. So we want to listen to him. But I guess what I'm just saying is, you know, every time some sort of new technology or new use case for technology comes up, there's a group of people who come out and freak out and they get lots of op-eds. It's usually men, I must say. There's a lot of women doing some really interesting scholarship in this area that don't get the op-eds and quite the publicity. So there's that. Then it is interesting because it makes people think about technology ethics, usually, again, from a place of either fear, right -- Are they going to kill us? Are they going to take our jobs? Are they going to remove human agency? -- or money -- How are people going to make a huge amount of money? Who's going to make the money? And by displacing whom, right? So, we have two levers: incredible doom or incredible opportunity. And that leaves the rest of us, I think, probably somewhere in the middle, scratching our heads and going like, is this going to actually change my life? And if so, how, and do I really care, given that I've got like, you know, a cost of living crisis, recovering from the Covid pandemic for the past few years? Like, if you're not in this world, it can seem like a lot of shouting. There's also the question of, do we need new laws? So we know that the European Union has the AI Act coming down the pipe. That's supposed to be passed this year, and there'll be a two year implementation grace period. So that's interesting. It doesn't cover stuff really, like ChatGPT specifically, but then I don't know if you want good regulation to cover the technology itself, or how technology is used. And I talked about this in my book, like, do you want to regulate forks -- a tool -- or do you want to regulate use cases for forks? So if I'm, if I stab you, or kill you with a fork, which is totally possible, that is something that we've regulated; we've regulated the use case, if you will, of murder, or of injury with a fork or frankly, any other tool. So it's the use case we focus on. We don't really regulate forks. We do regulate some technologies like bioethics technologies, or biomedical technologies, excuse me, sort of human genetic stuff, anything nuclear. Those technologies we do specifically regulate. So we just need to think about where does AI fit with that? And also, do we need new regulations for everything, or can we use existing ones? And that's what's becoming really interesting is that in the US, where I'm from, the main regulator, the FTC, seems to think that it can use a lot of existing laws already. So they've been like, if your AI is claiming to do stuff that it can't, we're gonna come after you under, like, kind of sort of false advertising, if you will, misrepresenting yourself. They might come after some of the big AI companies based on anti-competition law, right? So no new laws needed for that. And then with the music industry, they've been going after all the people who are like, oh, let's like remix a Drake song, and saying, well, actually, you can't do that, because you're violating copyright law, take it down. Right. So again, I don't want to be like too, too calm about it. Like, we do need to look at some of the use cases that are really problematic and hurting people. But we might actually have a lot more in our arsenal to combat this than we're currently using. And I think what's going to happen is, unfortunately, the pace of crafting legislation, and then regulators never fully enforce regulations-- Look at the GDPR: no company's ever been given the full fine. And here in the UK, the ICO is famous for letting companies off the hook, giving them less than half of the original fine. It's ridiculous. So if you're going to pin your hopes on regulation, I'm not sure that's great. I'm weirdly more optimistic about landmark legal cases. So we're seeing an Australian mayor who was totally defamed by ChatGPT, in Australia, he's going to be taking or is taking OpenAI to court. And then we might see some of these copyright issues, that could be taken to court, right. And like, that's where people I think will get more action and, frankly, more respect, because these companies are really happy to pay a lot of money to lobby our lawmakers, and water stuff down. And they always say, Oh, my God, it's going to constrain innovation. And if they really get desperate, they'll be like, China! If we don't, if we're not allowed to do everything we want, China will win! That is like a-- that is just a game that takes everybody nowhere, whereas in the lawsuit angle, that's interesting, because you're demonstrating responsibility, you're discussing liability, you're having to demonstrate harm. And in the process of discovery, right, you might be able to actually get some of these companies to open up their datasets, how their algorithms work, like, I'm much more intrigued to see where that's gonna go.
+Well, there's a few things to say on this. So like, first of all, a couple of weeks ago, a bunch of people working in AI, about 1000-plus people -- including some fictitious people, by the way -- sign this this letter calling for a moratorium on AI research for six months, which was unenforceable, clearly not going to happen, was signed by Elon Musk, who then very quickly announced he was developing his own rival to OpenAI, the company that invented ChatGPT. So you take all of that with a grain of salt. But again, if you're, if you're an historian, or if you just have a long memory, you'll remember that there have been several letters like this. There's always somebody, you know, very big-wig people. It's not that we want to dismiss it. But Stephen Hawking and Elon Musk were warning, you know, over around 10 years ago that AI was going to kill humanity if we didn't put guardrails on it. Professor Stuart Russell talked about this in his Reith Lectures a couple of years ago, which are still online and you can listen to them. And you know, he's not an alarmist. He's a serious person and a serious thinker. So we want to listen to him. But I guess what I'm just saying is, you know, every time some sort of new technology or new use case for technology comes up, there's a group of people who come out and freak out and they get lots of op-eds. It's usually men, I must say. There's a lot of women doing some really interesting scholarship in this area that don't get the op-eds and quite the publicity. So there's that. Then it is interesting because it makes people think about technology ethics, usually, again, from a place of either fear, right -- Are they going to kill us? Are they going to take our jobs? Are they going to remove human agency? -- or money -- How are people going to make a huge amount of money? Who's going to make the money? And by displacing whom, right? So, we have two levers: incredible doom or incredible opportunity. And that leaves the rest of us, I think, probably somewhere in the middle, scratching our heads and going like, is this going to actually change my life? And if so, how, and do I really care, given that I've got like, you know, a cost of living crisis, recovering from the Covid pandemic for the past few years? Like, if you're not in this world, it can seem like a lot of shouting. There's also the question of, do we need new laws? So we know that the European Union has the AI Act coming down the pike. That's supposed to be passed this year, and there'll be a two year implementation grace period. So that's interesting. It doesn't cover stuff really, like ChatGPT specifically, but then I don't know if you want good regulation to cover the technology itself, or how technology is used. And I talked about this in my book, like, do you want to regulate forks -- a tool -- or do you want to regulate use cases for forks? So if I'm, if I stab you, or kill you with a fork, which is totally possible, that is something that we've regulated; we've regulated the use case, if you will, of murder, or of injury with a fork or frankly, any other tool. So it's the use case we focus on. We don't really regulate forks. We do regulate some technologies like bioethics technologies, or biomedical technologies, excuse me, sort of human genetic stuff, anything nuclear. Those technologies we do specifically regulate. So we just need to think about where does AI fit with that? And also, do we need new regulations for everything, or can we use existing ones? And that's what's becoming really interesting is that in the US, where I'm from, the main regulator, the FTC, seems to think that it can use a lot of existing laws already. So they've been like, if your AI is claiming to do stuff that it can't, we're gonna come after you under, like, kind of sort of false advertising, if you will, misrepresenting yourself. They might come after some of the big AI companies based on anti-competition law, right? So no new laws needed for that. And then with the music industry, they've been going after all the people who are like, oh, let's like remix a Drake song, and saying, well, actually, you can't do that, because you're violating copyright law, take it down. Right. So again, I don't want to be like too, too calm about it. Like, we do need to look at some of the use cases that are really problematic and hurting people. But we might actually have a lot more in our arsenal to combat this than we're currently using. And I think what's going to happen is, unfortunately, the pace of crafting legislation, and then regulators never fully enforce regulations-- Look at the GDPR: no company's ever been given the full fine. And here in the UK, the ICO is famous for letting companies off the hook, giving them less than half of the original fine. It's ridiculous. So if you're going to pin your hopes on regulation, I'm not sure that's great. I'm weirdly more optimistic about landmark legal cases. So we're seeing an Australian mayor who was totally defamed by ChatGPT, in Australia, he's going to be taking or is taking OpenAI to court. And then we might see some of these copyright issues, that could be taken to court, right. And like, that's where people I think will get more action and, frankly, more respect, because these companies are really happy to pay a lot of money to lobby our lawmakers, and water stuff down. And they always say, Oh, my God, it's going to constrain innovation. And if they really get desperate, they'll be like, China! If we don't, if we're not allowed to do everything we want, China will win! That is like a-- that is just a game that takes everybody nowhere, whereas in the lawsuit angle, that's interesting, because you're demonstrating responsibility, you're discussing liability, you're having to demonstrate harm. And in the process of discovery, right, you might be able to actually get some of these companies to open up their datasets, how their algorithms work, like, I'm much more intrigued to see where that's gonna go.
 
 **Brian Tarran**\
 Yeah, but I think I mean, having read your book, I would, I would have thought you might perceive all of this sort of stuff as kind of sticking plasters to put over the the injuries that might be caused by these technologies, right? Your argument seems to be that we have an issue whereby we don't have a culture of technology ethics. So when we're thinking about building these tools, or when we're starting off down the path of creating something like this, we're not already thinking about, you know, the use cases, the harms that might arise from that and things like that. What does it take to build a culture of technology ethics, do you think, in our society, in our academic institutions in our companies?
