final style edits

--- a/viewpoints/interviews/posts/2023/05/11/chatgpt-data-science-pt1.qmd
+++ b/viewpoints/interviews/posts/2023/05/11/chatgpt-data-science-pt1.qmd
@@ -1,7 +1,7 @@
 ---
 title: How is ChatGPT changing data science?
 description: |
-  We sit down with the Royal Statistical Society’s Data Science & AI section to hear how large language models are becoming part of the data science toolkit – and what this new development means for data science teams and skillsets.        
+  We sit down with the Royal Statistical Society’s Data Science and AI Section to hear how large language models are becoming part of the data science toolkit – and what this new development means for data science teams and skillsets.        
 categories:
   - Large language models
   - AI
@@ -15,7 +15,7 @@ image-alt: Photo of ChatGPT homescreen, by Levart_Photographer on Unsplash.
 ---
 For many people, it starts with a question. Something simple, something they already know the answer to. A test, in other words, to see what these AI-powered chatbots are all about. But spend any amount of time with ChatGPT and other such tools and you’ll quickly start to wonder what else they might do, and how useful they might be in your day-to-day working life.
 
-Data scientists certainly have been thinking along these lines, and to find out more about current use cases, proofs of concepts and potential applications, Real World Data Science got together with members of the [Royal Statistical Society’s Data Science & AI section](https://rss.org.uk/membership/rss-groups-and-committees/sections/data-science-section/) (DS&AI) for a group discussion.
+Data scientists certainly have been thinking along these lines, and to find out more about current use cases, proofs of concepts and potential applications, Real World Data Science got together with members of the [Royal Statistical Society’s Data Science and AI Section](https://rss.org.uk/membership/rss-groups-and-committees/sections/data-science-section/) (DS&AI) for a group discussion.
 
 Our interviewees, in order of appearance, are:
 
@@ -26,9 +26,11 @@ Our interviewees, in order of appearance, are:
 -	**Giles Pavey**, global director for data science at Unilever, and DS&AI vice-chair.
 -	**Martin Goodson**, CEO and chief scientist at Evolution AI, and DS&AI committee member.
 
-The first part of our discussion focuses on how large language models are becoming part of the data science toolkit – and what this new development means for data science teams and skillsets. Stay tuned for part two, which we’ll be publishing soon!
+The first part of our discussion focuses on how large language models are becoming part of the data science toolkit, and what this new development means for data science teams and skillsets. Stay tuned for part two, which we’ll be publishing soon!
 
-**As data scientists, how has ChatGPT -- and other tools built on large language models (LLMs) -- changed your working life?**
+![](images/chatgpt-homescreen.png){fig-align="center" width="500px" fig-alt="Photo of ChatGPT homescreen, by Levart_Photographer on Unsplash."}
+
+**As data scientists, how has ChatGPT -- and other tools built on large language models (LLMs) -- changed your working lives?**
 
 **Piers Stobbs:** Up to about a year ago, although I was really impressed with the developments in deep learning and the improvements in computer vision and natural language models, it felt in line with general improvements in machine learning. And then, probably about six months ago, with things like DALL·E and ChatGPT, it felt like something changed -- properly ground-breaking capabilities. And I still can't quite get my head around the fact that you can basically have a model that tries to predict the next token, and it comes up with outputs that really feel quite sensible and human-like – if prone to [hallucination](https://realworlddatascience.net/viewpoints/editors-blog/posts/2022/11/23/LLM-content-warning.html).
 
@@ -46,7 +48,7 @@ But probably the thing I'm most excited about is the knowledge sharing side of i
 ::: {.g-col-12 .g-col-lg-8 .pullquote-grid .pullquote}
 ![](/images/pullquote-purple.png){width="50px"}
 
-This feels like a brand-new capability -- an interface with unstructured information. Historically, you have to turn text into something, and then turn something back into text, if you want to have this interface with humans. Now, we’ve got this really quite elegant way of plugging the gaps.  
+This feels like a brand-new capability -- an interface with unstructured information. Historically, you have to turn text into something, and then turn something back into text, if you want to have this interface with humans. Now, we’ve got this elegant way of plugging the gaps.  
 :::
 :::
 :::
@@ -82,7 +84,7 @@ In pure proofs of concepts, departments that have large knowledge banks are usin
 
 **AD:** A little bit. As someone at a small organisation, I think it's quite exciting because, five years ago, maybe you were in a world where if you had a sophisticated problem involving text or images, you’d need a big research team with a big budget to tackle it. But increasingly we find, like many other people, that you can take models off the shelf and repurpose them for quite diverse tasks. So, I think it's becoming increasingly viable to have a small team of people who are implementers, who aren't necessarily backed up by a big research organisation, doing increasingly sophisticated stuff. 
 
-I don't think it does away with the sort of things that we always bang on about in the Data Science & AI section, like the need for an understanding of statistics and how the underlying systems really work, because I think you still need to understand what you're doing with LLMs, as with any other machine learning technique. But, if I had to guess, what we're going to be seeing now is that for a lot of problems, you're going to have more of a division – so, you’re either in one of a small number of very large labs doing research on very cutting-edge big models, or you can be an implementer who is taking things off the shelf and applying them. And maybe that space in between is going to get a little bit squeezed -- that would be my guess, but obviously it’s very unpredictable.
+I don't think it does away with the sort of things that we always bang on about in the Data Science and AI Section, like the need for an understanding of statistics and how the underlying systems really work, because I think you still need to understand what you're doing with LLMs, as with any other machine learning technique. But, if I had to guess, what we're going to be seeing now is that for a lot of problems, you're going to have more of a division – so, you’re either in one of a small number of very large labs doing research on very cutting-edge big models, or you can be an implementer who is taking things off the shelf and applying them. And maybe that space in between is going to get a little bit squeezed -- that would be my guess, but obviously it’s very unpredictable.
 
 ::: {.pullquote-container}
 ::: grid
@@ -128,31 +130,26 @@ Can the Royal Statistical Society help non-tech companies embrace large language
 
 **TDF:** Will experts like us actually be able to check it because of the speed that new versions are coming out and the developments that are happening? Is it going to take us six months to check that GPT-3.5 works? Well, too late, a month later GPT-4’s out! I just think that pace is going to keep accelerating.
 
-::: {.callout-note appearance="simple"}
-Part two of our conversation with the Royal Statistical Society's Data Science & AI section will be published soon. Stay tuned!
+::: {.callout-note style="margin-top: 2.25rem;" appearance="simple"}
+Part two of our conversation with the Royal Statistical Society's Data Science and AI Section will be published soon. Stay tuned!
 :::
 
-::: article-btn
-[Find more Interviews](/viewpoints/interviews/index.qmd)
+::: {.article-btn}
+[Back to Careers](/careers/index.qmd)
 :::
 
 ::: further-info
 ::: grid
-::: {.g-col-12 .g-col-md-6}
-
+::: {.g-col-12 .g-col-md-12}
 Copyright and licence
-
 :   © 2023 Royal Statistical Society
 
 <a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> <img src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1" style="height:22px!important;vertical-align:text-bottom;"/><img src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1" style="height:22px!important;margin-left:3px;vertical-align:text-bottom;"/></a> This interview is licensed under a Creative Commons Attribution 4.0 (CC BY 4.0) <a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> International licence</a>. Photos are not covered by this licence. Portrait photos are supplied by interviewees and used with permission. ChatGPT homescreen photo by <a href="https://unsplash.com/@siva_photography?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Levart_Photographer</a> on <a href="https://unsplash.com/photos/drwpcjkvxuU?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>.
   
-
 :::
 
-::: {.g-col-12 .g-col-md-6}
-
+::: {.g-col-12 .g-col-md-12}
 How to cite
-
 :   Tarran, Brian. 2023. "How is ChatGPT changing data science?" Real World Data Science, May 11, 2023. [URL](https://realworlddatascience.net/viewpoints/interviews/posts/2023/05/11/chatgpt-data-science-pt1.html)
 :::
 :::
